--- a/sprint_1/pay-with-paypal/src/styles.css
+++ b/sprint_1/pay-with-paypal/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: Roboto, Helvetica, sans-serif;
+  font-size: 16px;
+  background-color: #e5e5e5 !important;
+}
+h2 {
+  font-size: 1.5rem !important;
+}
